[project]
name = "sql-format"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "pyperclip>=1.9.0",
    "rich>=14.0.0",
    "sqlparse>=0.5.3",
]


[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
fmt = "fmt.main:main"
